--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -4,10 +4,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="initial-scale=1.0"/>
     <title>{% if page.title %}{{ page.title }} | {% endif %}Phillip Ridlen</title>
-    <link href="http://feeds.feedburner.com/philtrblog" rel="alternate" title="Phillip's Blog" type="application/atom+xml" />
+    <link href="http://feeds.feedburner.com/phillipridlen" rel="alternate" title="Phillip Ridlen" type="application/atom+xml" />
 
     {% include libraries.html %}
-
   </head>
   <body>
 
