Use Chaparral Pro instead of Freight Display

--- a/_sass/bootstrap/_variables.scss
+++ b/_sass/bootstrap/_variables.scss
@@ -48,7 +48,7 @@ $link-hover-decoration: underline !default;
 //## Font, line-height, and color for body text, headings, and more.
 
 $font-family-sans-serif:  "freight-sans-pro", sans-serif !default;
-$font-family-serif:       "freight-display-pro", "Georgia", serif !default;
+$font-family-serif:       "chaparral-pro", "Chaparral Pro", "Georgia", serif !default;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 $font-family-monospace:   "source-code-pro", "Source Code Pro", Menlo, Monaco, Consolas, "Courier New", monospace !default;
 $font-family-base:        $font-family-sans-serif !default;
