Add Turbolinks and Contact Form

--- a/_includes/libraries.html
+++ b/_includes/libraries.html
@@ -1,4 +1,6 @@
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" />
-<link rel="stylesheet" href="{{ site.base-url }}/assets/css/main.css" />
+<link rel="stylesheet" href="/assets/css/main.css" />
 <script type="text/javascript" src="//use.typekit.net/uwc3ots.js"></script>
-<script src="{{ site.base-url }}/assets/js/all.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="/assets/js/turbolinks.js"></script>
+<script src="/assets/js/main.js"></script>
