Don’t submit contact form by Ajax
Run RubyPants on Haml results

--- a/contact/index.haml
+++ b/contact/index.haml
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-%form{ role: "form", id: "contact" }
+%form{ role: "form", id: "contact", action: "https://formkeep.com/f/321d46f244f3", method: "post" }
   .form-group
     .row
       .col-md-6
