Add metadata divider to posts

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,16 @@
 <footer>
-  <div class="pull-right">
-    <div class="social">
-      <a href="https://github.com/philtr"><span class="fa fa-github-square"></span></a>
-      <a href="https://facebook.com/philtr"><span class="fa fa-facebook-square"></span></a>
-      <a href="http://twitter.com/philtr"><span class="fa fa-twitter-square"></span></a>
-      <a href="/contact"><span class="fa fa-envelope-square"></span></a>
+  <hr/>
+  <div class="container">
+    <div class="pull-right">
+      <div class="social">
+        <a href="https://github.com/philtr"><span class="fa fa-github-square"></span></a>
+        <a href="https://facebook.com/philtr"><span class="fa fa-facebook-square"></span></a>
+        <a href="http://twitter.com/philtr"><span class="fa fa-twitter-square"></span></a>
+        <a href="/contact"><span class="fa fa-envelope-square"></span></a>
+      </div>
     </div>
-  </div>
 
-  <p><a href="http://creativecommons.org/licenses/by-nc/3.0/" title="Creative Commons
-      Attribution-NonCommercial 3.0" class="cc-icons">cbn</a></p>
+    <p><a href="http://creativecommons.org/licenses/by-nc/3.0/" title="Creative Commons
+        Attribution-NonCommercial 3.0" class="cc-icons">cbn</a></p>
+  </div>
 </footer>
