--- a/_includes/libraries.html
+++ b/_includes/libraries.html
@@ -2,5 +2,6 @@
 <link rel="stylesheet" href="/assets/css/main.css" />
 <script type="text/javascript" src="//use.typekit.net/uwc3ots.js"></script>
 <script type="text/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <script src="/assets/js/turbolinks.js"></script>
 <script src="/assets/js/main.js"></script>
