Change intro to serif font
Update thanks page

--- a/_sass/elements/_intro.scss
+++ b/_sass/elements/_intro.scss
@@ -1,6 +1,5 @@
 .intro {
-  border-bottom: 1px dotted $gray-light;
-  font-size: 125%;
+  font-family: $font-family-serif;
+  font-size: 150%;
   margin-bottom: 1em;
-  padding-bottom: 1em;
 }
