--- a/contact/index.haml
+++ b/contact/index.haml
@@ -1,6 +1,9 @@
 ---
 layout: default
 ---
+.intro
+  :markdown
+    Submit the form below, or if you'd prefer, send an email directly to p _at_ rdln _dot_ net.
 
 %form{ role: "form", id: "contact", action: "https://formkeep.com/f/321d46f244f3", method: "post" }
   .form-group
