--- a/contact/thanks.haml
+++ b/contact/thanks.haml
@@ -1,9 +1,14 @@
 ---
 layout: default
 ---
+.intro
+  :markdown
+    Submit the form below, or if you'd prefer, send an email directly to p _at_ rdln _dot_ net.
+
+%hr
 
 .intro
   :markdown
-    Thanks! I'll be in touch with you soon.
+    _**Thanks! I'll be in touch with you soon.**_
 
 
