--- a/_sass/elements/_post.scss
+++ b/_sass/elements/_post.scss
@@ -26,6 +26,10 @@
     font-size: 70%;
   }
 
+  img {
+    max-width: 100%;
+  }
+
   .footnotes {
     border-top: 1px solid $gray-lighter;
     padding-top: 1em;
