--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
         <span class="sr-only">Toggle navigation</span>
         <span class="fa fa-bars"></span>
       </button>
-      <a class="navbar-brand" href="{{ site.base-url }}/">Phillip Ridlen</a>
+      <a class="navbar-brand" href="/">Phillip Ridlen</a>
     </div>
 
     <div class="collapse navbar-collapse" id="main-menu">
