Missed one. :boom:

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -15,7 +15,7 @@
 
   <div class="post-date">
     <span class="fa fa-chevron-left"></span>
-    <a class="post-permalink" href="{{ site.url }}/{{ post.url }}" data-toggle="tooltip" data-placement="bottom" title="Permalink"><span class="fa fa-link" title="Permalink"></a>
+    <a class="post-permalink" href="{{ site.url }}{{ page.url }}" data-toggle="tooltip" data-placement="bottom" title="Permalink"><span class="fa fa-link" title="Permalink"></a>
     <span class="fa fa-clock-o" data-toggle="tooltip" data-placement="bottom" title="Posted on {{ page.date | date: "%B %d, %Y" }}"></span>
     <span class="fa fa-chevron-right"></span>
   </div>
