Add some meta tags

--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -8,6 +8,8 @@
 
     <link href="http://feeds.feedburner.com/phillipridlen" rel="alternate" title="Phillip Ridlen" type="application/atom+xml" />
 
+    {% include metadata.html %}
+
     {% include libraries.html %}
   </head>
   <body>
