--- a/about.haml
+++ b/about.haml
@@ -6,7 +6,7 @@ layout: default
   :markdown
     I&rsquo;m a Ruby developer at [Oven Bits](http://ovenbits.com)
     in Dallas, Texas. I&rsquo;m not available for freelance work, but feel free to take a look at my
-    [projects](http://philtr.github.io) or shoot me an [email](/contact).
+    [projects](/projects/) or shoot me an [email](/contact/).
 
 :markdown
   I also exist elsewhere on the internet:
