Update About page

--- a/about.haml
+++ b/about.haml
@@ -4,13 +4,50 @@ layout: default
 
 .intro
   :markdown
-    I&rsquo;m a Ruby developer at [Oven Bits](http://ovenbits.com)
-    in Dallas, Texas. I&rsquo;m not available for freelance work, but feel free to take a look at my
-    [projects](/projects/) or shoot me an [email](/contact/).
+    Hi, there! On this site, you'll find an assortment of posts about programming, Christianity, food,
+    and life in general.
 
 :markdown
+  I'm a Ruby developer baking up awesome digital treats at [Oven Bits](http://ovenbits.com) in
+  Dallas. I'm not interested in freelance work, but feel free to take a look at my [open source
+  projects](/projects/). I organize [Ruby FTW](http://rubyftw.org), the Ruby enthuisast group of
+  Fort Worth, which, if you're located in the area, should definitely come check out&mdash;we have
+  free pizza!
+
+  I'm also the youth director at [Burleson Bible Church](http://burlesonbible.org) for students in
+  7th-12th grade. I apologize in advance for the fart jokes.
+
+  The tech stack for this website includes:
+
+    * [Ruby](https://www.ruby-lang.org/), [Jekyll](http://jekyllrb.com), & [Sass](http://sass-lang.com/) to generate the site
+    * [Bootstrap](http://getbootstrap.com) and [Font Awesome](http://fontawesome.io) because I'm too lazy to do it myself
+    * [s3_website](https://github.com/laurilehmijoki/s3_website) to deploy it to:
+      * [Amazon S3](http://aws.amazon.com/s3/) for static asset hosting
+      * [Amazon CloudFront](http://aws.amazon.com/cloudfront/) - distribution network for super-fast responses
+    * Zero self-managed server infrastructure (also because I'm lazy)
+
+  The type is set in [Freight Sans](http://www.dardenstudio.com/typefaces/freight_sans) and
+  [Chaparral](https://store1.adobe.com/cfusion/store/html/index.cfm?store=OLS-US&event=displayFontPackage&code=1717).
+
+  My preferred Bible translation is the [English Standard Version](http://www.esv.org/), although
+  the [Lexham English Bible](http://lexhamenglishbible.com/) intrigues me as one staying as close to
+  the original language text as possible.
+
   I also exist elsewhere on the internet:
 
     * Code on [GitHub](https://github.com/philtr)
     * "Designs" on [Dribbble](http://dribbble.com/philtr)
     * Tweets on [Twitter](http://twitter.com/philtr)
+
+  ---
+
+  _Unless otherwise noted, all Scripture quotations are from the ESV&#174; Bible (The Holy Bible,
+  English Standard Version&#174;), copyright &copy; 2001 by Crossway, a publishing ministry of Good
+  News Publishers. Used by permission. All rights reserved._
+
+  _Scripture quotations marked (LEB) are from the Lexham English Bible. Copyright 2012 [Logos Bible
+  Software][logos]. Lexham is a registered trademark of [Logos Bible Software][logos]._
+
+  [logos]: http://www.logos.com/
+
+
