Add turbolinks to tech stack

--- a/about.haml
+++ b/about.haml
@@ -21,6 +21,7 @@ layout: default
 
     * [Ruby](https://www.ruby-lang.org/), [Jekyll](http://jekyllrb.com), & [Sass](http://sass-lang.com/) to generate the site
     * [Bootstrap](http://getbootstrap.com) and [Font Awesome](http://fontawesome.io) because I'm too lazy to do it myself
+    * [Turbolinks](https://github.com/rails/turbolinks) for speedy page loads and client-side caching
     * [s3_website](https://github.com/laurilehmijoki/s3_website) to deploy it to:
       * [Amazon S3](http://aws.amazon.com/s3/) for static asset hosting
       * [Amazon CloudFront](http://aws.amazon.com/cloudfront/) - distribution network for super-fast responses
