Update fallback fonts

--- a/_sass/bootstrap/_variables.scss
+++ b/_sass/bootstrap/_variables.scss
@@ -48,15 +48,17 @@ $link-hover-decoration: underline !default;
 //
 //## Font, line-height, and color for body text, headings, and more.
 
-$font-family-sans-serif:  "freight-sans-pro", sans-serif !default;
-$font-family-serif:       "chaparral-pro", "Chaparral Pro", "Georgia", serif !default;
+$font-family-sans-serif:  "freight-sans-pro", "Seravek", "Segoe UI", sans-serif !default;
+$font-family-serif:       "chaparral-pro", "Chaparral Pro", "Charter", "Cambria", serif !default;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
-$font-family-monospace:   "source-code-pro", "Source Code Pro", Menlo, Monaco, Consolas, "Courier New", monospace !default;
+$font-family-monospace:   "source-code-pro", "Source Code Pro", Consolas, Menlo, Monaco, monospace !default;
 $font-family-base:        $font-family-sans-serif !default;
 
 $font-size-base:          17px !default;
 $font-size-large:         ceil(($font-size-base * 1.25)) !default; // ~18px
 $font-size-small:         ceil(($font-size-base * 0.85)) !default; // ~12px
+
+$font-weight-base:        200 !default;
 
 $font-size-h1:            floor(($font-size-base * 2.6)) !default; // ~36px
 $font-size-h2:            floor(($font-size-base * 2.15)) !default; // ~30px
