Add shy hyphens to intro paragraphs

--- a/about.haml
+++ b/about.haml
@@ -4,15 +4,15 @@ layout: default
 
 .intro
   :markdown
-    Hi, there! On this site, you'll find an assortment of posts about programming, Christianity, food,
-    and life in general.
+    Hi, there! On this site, you'll find an assort&shy;ment of posts about program&shy;ming,
+    Christ&shy;ianity, food, and life in general.
 
 :markdown
   I'm a Ruby developer baking up awesome digital treats at [Oven Bits](http://ovenbits.com) in
   Dallas. I'm not interested in freelance work, but feel free to take a look at my [open source
   projects](/projects/). I organize [Ruby FTW](http://rubyftw.org), the Ruby enthuisast group of
-  Fort Worth, which, if you're located in the area, should definitely come check out&mdash;we have
-  free pizza!
+  Fort Worth, which, if you're located in the area, should definitely come it check out&mdash;we
+  have free pizza!
 
   I'm also the youth director at [Burleson Bible Church](http://burlesonbible.org) for students in
   7th-12th grade. I apologize in advance for the fart jokes.
