--- a/contact/index.haml
+++ b/contact/index.haml
@@ -3,7 +3,7 @@ layout: default
 ---
 .intro
   :markdown
-    Submit the form below, or if you'd prefer, send an email directly to p _at_ rdln _dot_ net.
+    Submit the form below, or if you'd pre&shy;fer, send an email di&shy;rectly to p _at_ rdln _dot_ net.
 
 %form{ role: "form", id: "contact", action: "https://formkeep.com/f/321d46f244f3", method: "post" }
   .row
