Use Constantina instead of Cambria
And prefer it to Charter

--- a/_sass/bootstrap/_variables.scss
+++ b/_sass/bootstrap/_variables.scss
@@ -49,7 +49,7 @@ $link-hover-decoration: underline !default;
 //## Font, line-height, and color for body text, headings, and more.
 
 $font-family-sans-serif:  "freight-sans-pro", "Seravek", "Segoe UI", sans-serif !default;
-$font-family-serif:       "chaparral-pro", "Chaparral Pro", "Charter", "Cambria", serif !default;
+$font-family-serif:       "chaparral-pro", "Chaparral Pro", "Constantina" ,"Charter", serif !default;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 $font-family-monospace:   "source-code-pro", "Source Code Pro", Consolas, Menlo, Monaco, monospace !default;
 $font-family-base:        $font-family-sans-serif !default;
