--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,23 +1,25 @@
 <div class="post">
   <div class="post-title">
     {% if page.type == "link" %}
-      <a href="{{ page.source }}">{{ page.title }}</a>
+      <a href="{{ page.link.source }}">{{ page.title }}</a>
     {% else %}
       <a href="{{ page.url }}">{{ page.title }}</a>
     {% endif %}
   </div>
 
-  {% if content %}
-    {{ content }}
-  {% else %}
-    {{ page.content }}
-  {% endif %}
+  <div class="post-content post-{{ page.type }}">
+    {% if content %}
+      {{ content }}
+    {% else %}
+      {{ page.content }}
+    {% endif %}
+  </div>
 
   <div class="post-date">
     <span class="fa fa-chevron-left"></span>
     <a class="post-permalink" href="{{ site.url }}{{ page.url }}" data-toggle="tooltip" data-placement="bottom" title="Permalink"><span class="fa fa-link" title="Permalink"></a>
     <span class="fa fa-clock-o" data-toggle="tooltip" data-placement="bottom" title="Posted on {{ page.date | date: "%B %d, %Y" }}"></span>
+    <span class="fa fa-tags" data-toggle="tooltip" data-placement="bottom" title="{{ page.tags | array_to_sentence_string }}"></span>
     <span class="fa fa-chevron-right"></span>
   </div>
 </div>
-
