Add instagram link

--- a/about.haml
+++ b/about.haml
@@ -39,6 +39,7 @@ layout: default
     * Code on [GitHub](https://github.com/philtr)
     * "Designs" on [Dribbble](http://dribbble.com/philtr)
     * Tweets on [Twitter](http://twitter.com/philtr)
+    * Bad food pictures on [Instagram](https://instagram.com/philtr)
 
   ---
 
