Add permalink and button text

--- a/error.haml
+++ b/error.haml
@@ -1,5 +1,6 @@
 ---
 layout: bare
+permalink: error.html
 ---
 .container
   %h1 Oops!
@@ -9,4 +10,4 @@ layout: bare
       I can't find the page you're looking for. Perhaps if you went back to the [home page](/) you
       could find what you were looking for? Sorry, wish I could be more help here.
 
-  %a.btn.btn-primary{ href: "/" }
+  %a.btn.btn-primary{ href: "/" } Home
