Add RSS to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,7 @@
         <a href="https://github.com/philtr"><span class="fa fa-github-square"></span></a>
         <a href="https://facebook.com/philtr"><span class="fa fa-facebook-square"></span></a>
         <a href="http://twitter.com/philtr"><span class="fa fa-twitter-square"></span></a>
+        <a href="{{ site.rss }}"><span class="fa fa-rss-square"></span></a>
         <a href="/contact"><span class="fa fa-envelope-square"></span></a>
       </div>
     </div>
