--- a/_layouts/bare.html
+++ b/_layouts/bare.html
@@ -6,7 +6,7 @@
 
     <title>{% if page.title %}{{ page.title }} | {% endif %}Phillip Ridlen</title>
 
-    <link href="http://feeds.feedburner.com/phillipridlen" rel="alternate" title="Phillip Ridlen" type="application/atom+xml" />
+    <link href="{{ site.rss }}" rel="alternate" title="Phillip Ridlen" type="application/atom+xml" />
 
     {% include metadata.html %}
 
