Add “technology” to categories

--- a/about.haml
+++ b/about.haml
@@ -5,7 +5,7 @@ layout: default
 .intro
   :markdown
     Hi, there! On this site, you'll find an assort&shy;ment of posts about program&shy;ming,
-    Christ&shy;ianity, food, and life in general.
+    tech&shy;no&shy;logy, Christ&shy;ianity, food, and life in general.
 
 :markdown
   I'm a Ruby developer baking up awesome digital treats at [Oven Bits](http://ovenbits.com) in
