Update About page with icons

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -12,6 +12,8 @@
         <span class="fa fa-leaf"></span>
       {% when "Programming" %}
         <span class="fa fa-code"></span>
+      {% when "Technology" %}
+        <span class="fa fa-desktop"></span>
       {% when "Food" %}
         <span class="fa fa-birthday-cake"></span>
       {% endcase %}
