--- a/about.haml
+++ b/about.haml
@@ -3,9 +3,12 @@ layout: default
 ---
 
 .intro
-  :markdown
-    Hi, there! On this site, you'll find an assort&shy;ment of posts about program&shy;ming,
-    tech&shy;no&shy;logy, Christ&shy;ianity, food, and life in general.
+  Hi, there! On this site, you'll find an assort&shy;ment of posts about
+  <span class="fa fa-code"></span>            program&shy;ming,
+  <span class="fa fa-desktop"></span>         tech&shy;no&shy;logy,
+  <span class="fa fa-book"></span>            Christ&shy;ianity,
+  <span class="fa fa-birthday-cake"></span>   food, and
+  <span class="fa fa-leaf"></span>            life in general.
 
 :markdown
   I'm a Ruby developer baking up awesome digital treats at [Oven Bits](http://ovenbits.com) in
