Add more &shy;s

--- a/about.haml
+++ b/about.haml
@@ -4,9 +4,9 @@ layout: default
 
 .intro
   Hi, there! On this site, you'll find an assort&shy;ment of posts about
-  <span class="fa fa-code"></span>            program&shy;ming,
+  <span class="fa fa-code"></span>            pro&shy;gram&shy;ming,
   <span class="fa fa-desktop"></span>         tech&shy;no&shy;logy,
-  <span class="fa fa-book"></span>            Christ&shy;ianity,
+  <span class="fa fa-book"></span>            Christ&shy;ian&shy;ity,
   <span class="fa fa-birthday-cake"></span>   food, and
   <span class="fa fa-leaf"></span>            life in general.
 
