Don’t break between icon and category

--- a/about.haml
+++ b/about.haml
@@ -4,11 +4,11 @@ layout: default
 
 .intro
   Hi, there! On this site, you'll find an assort&shy;ment of posts about
-  <span class="fa fa-code"></span>            pro&shy;gram&shy;ming,
-  <span class="fa fa-desktop"></span>         tech&shy;no&shy;logy,
-  <span class="fa fa-book"></span>            Christ&shy;ian&shy;ity,
-  <span class="fa fa-birthday-cake"></span>   food, and
-  <span class="fa fa-leaf"></span>            life in general.
+  <span class="fa fa-code"></span>&nbsp;pro&shy;gram&shy;ming,
+  <span class="fa fa-desktop"></span>&nbsp;tech&shy;no&shy;logy,
+  <span class="fa fa-book"></span>&nbsp;Chris&shy;tian&shy;ity,
+  <span class="fa fa-birthday-cake"></span>&nbsp;food, and
+  <span class="fa fa-leaf"></span>&nbsp;life in gen&shy;eral.
 
 :markdown
   I'm a Ruby developer baking up awesome digital treats at [Oven Bits](http://ovenbits.com) in
