Add CircleCI to tech stack

--- a/about.haml
+++ b/about.haml
@@ -27,8 +27,8 @@ layout: default
     * [Turbolinks](https://github.com/rails/turbolinks) for speedy page loads and client-side caching
     * [s3_website](https://github.com/laurilehmijoki/s3_website) to deploy it to:
       * [Amazon S3](http://aws.amazon.com/s3/) for static asset hosting
-      * [Amazon CloudFront](http://aws.amazon.com/cloudfront/) - distribution network for super-fast responses
-    * Zero self-managed server infrastructure (also because I'm lazy)
+      * [Amazon CloudFront](http://aws.amazon.com/cloudfront/) as a distribution network for super-fast responses
+    * [CircleCI](https://circleci.com) for continuous deployment
 
   The type is set in [Freight Sans](http://www.dardenstudio.com/typefaces/freight_sans) and
   [Chaparral](https://store1.adobe.com/cfusion/store/html/index.cfm?store=OLS-US&event=displayFontPackage&code=1717).
