--- a/_layouts/bare.html
+++ b/_layouts/bare.html
@@ -8,9 +8,9 @@
 
     <link href="{{ site.rss }}" rel="alternate" title="Phillip Ridlen" type="application/atom+xml" />
 
-    {% include metadata.html %}
-
-    {% include libraries.html %}
+    {% include head/favicon.html %}
+    {% include head/metadata.html %}
+    {% include head/libraries.html %}
   </head>
   <body>
     {{ content }}
