--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,40 +1,6 @@
 <div class="post">
-  <div class="post-date">
-    <span class="post-category" data-toggle="tooltip" data-placement="left" title="{{ page.category }}">
-      {% include post/icon.html %}
-    </span>
-    <time datetime="{{ page.date }}">{{ page.date | date: "%B %d, %Y" }}</time>
-  </div>
-
-  <div class="post-title">
-    {% if page.type == "link" %}
-      <a href="{{ page.link.source }}">{{ page.title }}</a>
-    {% else %}
-      <a href="{{ page.url }}">{{ page.title }}</a>
-    {% endif %}
-  </div>
-
-  <div class="post-content post-{{ page.type }}">
-    {% if content %}
-      {{ content }}
-    {% else %}
-      {{ page.content }}
-    {% endif %}
-
-    {% if page.link.via %}
-      <div class="post-via">
-        via <a href="{{ page.link.via_link }}">{{ page.link.via }}</a>.
-      </div>
-    {% endif %}
-  </div>
-
-
-  <div class="post-meta">
-    <span class="fa fa-chevron-left"></span>
-    <a class="post-permalink" href="{{ site.url }}{{ page.url }}" data-toggle="tooltip" data-placement="bottom" title="Permalink"><span class="fa fa-link" title="Permalink"></a>
-    <span class="fa fa-clock-o" data-toggle="tooltip" data-placement="bottom" title="Posted on {{ page.date | date: "%B %d, %Y" }}"></span>
-    <span class="fa fa-tags" data-toggle="tooltip" data-placement="bottom" title="{{ page.tags | array_to_sentence_string }}"></span>
-    {% if page.ghi %}<a href="{{ page.ghi }}" data-toggle="tooltip" data-placement="bottom" title="Comments on GitHub"><span class="fa fa-comments-o"></a>{% endif %}
-    <span class="fa fa-chevron-right"></span>
-  </div>
+  {% include post/date.html %}
+  {% include post/title.html %}
+  {% include post/content.html %}
+  {% include post/meta.html %}
 </div>
